@@ -22,6 +22,7 @@
 
 ***
 ***	Maude meta-interpreters.
+***	Version 2.5.
 ***
 
 mod META-INTERPRETER is
