@@ -22,7 +22,7 @@
 
 ***
 ***	Maude interpreter standard prelude.
-***	Version alpha92.
+***	Version 2.5.
 ***
 ***	Some of the overall structure is taken from the OBJ3
 ***	interpreter standard prelude.
